@@ -282,6 +282,7 @@
                             <compilerArgs>
                                 <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
                                 <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
+                                <arg>--add-exports=java.xml/com.sun=ALL-UNNAMED</arg>
                             </compilerArgs>
                         </configuration>
                     </plugin>
@@ -306,6 +307,7 @@
                             <compilerArgs>
                                 <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
                                 <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
+                                <arg>--add-exports=java.xml/com.sun=ALL-UNNAMED</arg>
                             </compilerArgs>
                         </configuration>
                     </plugin>
@@ -330,6 +332,7 @@
                             <compilerArgs>
                                 <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
                                 <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
+                                <arg>--add-exports=java.xml/com.sun=ALL-UNNAMED</arg>
                             </compilerArgs>
                         </configuration>
                     </plugin>
@@ -354,6 +357,7 @@
                             <compilerArgs>
                                 <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
                                 <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
+                                <arg>--add-exports=java.xml/com.sun=ALL-UNNAMED</arg>
                             </compilerArgs>
                         </configuration>
                     </plugin>
